<resources>
    <string name="app_name">Stuvo Activiteiten</string>
    <string name="navigation_drawer_open">Open navigatiebalk</string>
    <string name="navigation_drawer_close">Sluit navigatiebalk</string>
    <string name="nav_header_title">Stuvo Activiteiten</string>
    <string name="nav_header_subtitle">Mobile Development - Team Maes</string>
    <string name="nav_header_desc">Navigatie header</string>
    <string name="action_settings">Instellingen</string>
    <string name="company_logo">Bedrijfslogo</string>

    <string name="login_username">Gebruikersnaam</string>
    <string name="login_password">Wachtwoord</string>
    <string name="err_msg_login_username">Vul je gebruikersnaam in!</string>
    <string name="err_msg_login_password">Vul je wachtwoord in!</string>
    <string name="err_msg_login_noMatch">Uw gebruikersnaam en/of wachtwoord komt niet overeen met iets in ons systeem.</string>
    <string name="login_button">Inloggen</string>

    <string name="menu_home">Home</string>
    <string name="menu_previous">Vorige activiteiten</string>
    <string name="menu_requested">Aangevraagde activiteiten</string>
    <string name="menu_new">Nieuwe aanvraag</string>
    <string name="menu_friends">Vrienden</string>
    <string name="menu_logout">Uitloggen</string>

    <string name="home_developers">Ontwikkelaars</string>
    <string name="home_application">De applicatie</string>
    <string name="home_application_desc">
        Het nut van deze applicatie is om het aanvragen van activiteiten bij Stuvo te vergemakelijken.\n\nBij het aanvragen van deze activiteiten kwam er altijd erg veel papierwerk bij te zien en wij wouden met deze
        applicatie vergemakelijken.\n\nJammer genoeg konden we de applicatie niet maken voor Stuvo zelf, omdat de vereisten die zij stelden te hoog waren
        voor dit project.
    </string>

    <string name="new_name">Naam</string>
    <string name="new_date">Datum</string>
    <string name="new_address">Adres</string>
    <string name="new_price">Schatting totaalprijs</string>
    <string name="new_amountPlayers">Geschat aantal personen</string>
    <string name="new_description">Omschrijving</string>
    <string name="new_campus">Campus</string>
    <string name="new_button">Aanvragen</string>

    <string name="err_msg_name">Vul een naam in!</string>
    <string name="err_msg_address">Vul een adres in!</string>
    <string name="err_msg_description">Vul een omschrijving in!</string>
    <string name="err_msg_amountOfStudents">Vul een aantal studenten in!</string>
    <string name="err_msg_price">Vul een prijs!</string>
    <string name="err_msg_campus">Geen valide campus!</string>

    <string name="new_campus_hint">Geef de eerste letters van je campus</string>

    <string name="request_detail_price">Prijs (totaal):</string>
    <string name="request_detail_students">Aantal studenten:</string>
</resources>
