<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_friends"
            android:title="@string/menu_friends" />
    </group>

    <group
        android:id="@+id/hr_0"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_previous"
            android:icon="@drawable/ic_menu_previous"
            android:title="@string/menu_previous"/>
<!--            android:onClick="navToPrevious_fragment"-->
        <item
            android:id="@+id/nav_requested"
            android:icon="@drawable/ic_menu_requested"
            android:title="@string/menu_requested" />
        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_menu_new"
            android:title="@string/menu_new" />
    </group>

    <group
        android:id="@+id/hr_1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
