<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="be.thomasmore.stuvo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_previous"
        android:name="be.thomasmore.stuvo.ui.previous.PreviousFragment"
        android:label="@string/menu_previous"
        tools:layout="@layout/fragment_previous" />

    <fragment
        android:id="@+id/nav_requested"
        android:name="be.thomasmore.stuvo.ui.friends.FriendsFragment"
        android:label="@string/menu_requested"
        tools:layout="@layout/fragment_requested" />

    <fragment
        android:id="@+id/nav_new"
        android:name="be.thomasmore.stuvo.ui.logout.LogoutFragment"
        android:label="@string/menu_new"
        tools:layout="@layout/fragment_new" />

    <fragment
        android:id="@+id/nav_friends"
        android:name="be.thomasmore.stuvo.ui.newActivity.NewFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="be.thomasmore.stuvo.ui.requested.RequestedFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_home" />
</navigation>