<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:gravity="center">

    <ImageView
        android:layout_width="187dp"
        android:layout_height="86dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/company_logo"
        android:src="@mipmap/ic_launcher_round" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:drawablePadding="5dp"
        android:hint="@string/login_username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:drawablePadding="5dp"
        android:hint="@string/login_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_error_nomatch"
        android:text="@string/err_msg_login_noMatch"
        android:textColor="@color/red"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >
    </TextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login_button"
        android:onClick="checkLogin_onClick" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cheat_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Cheat"
        android:onClick="cheat_onClick"/>

</LinearLayout>