<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_application"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_application_desc"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_developers"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Esteban Beerens:"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="r0702667@student.thomasmore.be"
            android:autoLink="email"
            android:layout_marginBottom="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Maarten Michiels:"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="r0695495@student.thomasmore.be"
            android:autoLink="email"/>
        </LinearLayout>
</RelativeLayout>